# OficinaPro

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  docs_contextos.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/admin-web/: .env.example  Dockerfile  eslint.config.mjs  package.json  vercel.json
apps/admin-web/app/: layout.tsx  page.tsx
apps/admin-web/lib/supabase/: middleware.ts  server.ts
apps/admin-web/tests/: utils.test.ts
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260416_0001_create_users_table.py
apps/api/app/: main.py
apps/api/app/api/: auth_routes.py  critical_actions_routes.py  deps.py  routes.py  state_machine_routes.py
apps/api/app/core/: config.py  security.py
apps/api/app/models/: __init__.py  entities.py  user.py
apps/api/app/schemas/: audit.py  auth.py  state_machine.py
apps/api/app/services/: audit.py  state_machine.py
apps/api/tests/: test_auth_and_authorization.py  test_state_machine_routes.py
apps/client-portal/: .env.example  Dockerfile  next.config.ts  package.json  tsconfig.json  vercel.json
apps/client-portal/app/: layout.tsx  page.tsx
backend/: audit.py  authorization.py  portal_security.py  state_enums.py  state_transitions.py  test_audit.py  test_authorization.py  test_portal_security.py  test_state_transitions.py
backend/sql/: dashboard_read_layer.sql
docs/: arquitetura-fases-mvp.md  dicionario-metricas-dashboard.md  state-machines.md
supabase/: config.toml
(+2 files in other folders)
