[project]
name = "oficina-api"
version = "0.1.0"
description = "Backend FastAPI da Oficina Pro"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn[standard]>=0.34.2",
  "sqlalchemy>=2.0.40",
  "alembic>=1.15.2",
  "psycopg[binary]>=3.2.6",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.8.1",
  "PyJWT>=2.10.1",
  "email-validator>=2.2.0"
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "ruff>=0.11.6",
  "pytest>=8.3.5",
  "httpx>=0.28.1"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = [".", "../.."]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
